--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean-install": "rimraf node_modules package-lock.json && npm install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
